Reworked CTabFolder, Part I